--- a/app/src/main/res/layout/fragment_translate.xml
+++ b/app/src/main/res/layout/fragment_translate.xml
@@ -28,6 +28,7 @@
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
         android:id="@+id/progress_bar"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"/>
