--- a/app/src/main/res/layout/fragment_translate.xml
+++ b/app/src/main/res/layout/fragment_translate.xml
@@ -1,36 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".ui.translate.TranslateFragment">
 
-    <EditText
-        android:id="@+id/et_initial_word"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="Hello" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_translate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/purple_700"/>
+        <EditText
+            android:id="@+id/et_initial_word"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="@string/app_name"
+            android:inputType="text"
+            android:textColor="@color/purple_700"
+            android:textSize="30sp"
+            android:textStyle="bold|italic"
+            tools:text="Input" />
 
-    <TextView
-        android:id="@+id/tv_translated_word"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="Hello"/>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:id="@+id/progress_bar"
-        android:layout_gravity="center"
+            <TextView
+                android:id="@+id/tv_translated_word"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/purple_700"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                tools:text="Output" />
+        </ScrollView>
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_translate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/ic_translate_24"
+        app:fabSize="auto"
+        app:layout_anchor="@id/bottom_app_bar" />
 
-</LinearLayout>
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottom_app_bar"
+        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="bottom"
+        app:fabAlignmentMode="center"
+        app:fabCradleMargin="8dp"
+        app:fabCradleRoundedCornerRadius="32dp"
+        app:hideOnScroll="true">
+
+<!--        app:menu="@menu/menu_bottom_app_bar">-->
+
+        <!--        app:navigationIcon="@drawable/ic_launcher_foreground"-->
+
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent">-->
+
+                    <androidx.appcompat.widget.AppCompatImageButton
+                        android:id="@+id/button_sound"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:src="@drawable/ic_volume_24"
+                        android:visibility = "invisible"
+                        android:contentDescription="@string/app_name"
+                        app:cornerRadius="16dp"
+                        android:backgroundTint="@color/purple_500"/>
+<!--                </LinearLayout>-->
+
+<!--        style="@style/TextAppearance.AppCompat.Widget.Button"-->
+
+    </com.google.android.material.bottomappbar.BottomAppBar>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
