--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,12 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+<!--     Стиль для Switch- Чомусь не працює-->
+    <style name="Switch" parent="Theme.AppCompat.Light">
+        <!-- неактивное состояние ползунка -->
+        <item name="colorSwitchThumbNormal">@color/teal_200</item>
+        <!-- активное состояние (30% прозрачности для фона) -->
+        <item name="colorControlActivated">@color/teal_200</item>
+    </style>
 </resources>
