--- a/app/src/main/res/layout/fragment_translate.xml
+++ b/app/src/main/res/layout/fragment_translate.xml
@@ -62,6 +62,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
         android:src="@drawable/ic_translate_24"
+        android:alpha="0.75"
         app:fabSize="auto"
         app:layout_anchor="@id/bottom_app_bar" />
 
