--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center_vertical"
-    android:background="@drawable/gerb"
+    android:gravity="bottom"
+    android:background="@drawable/oxford_logo_png2"
     tools:context=".ui.homepage.HomepageFragment">
 
     <com.google.android.material.button.MaterialButton
