--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Translator" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Translator" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -10,9 +10,19 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+
+        <!--        Цвет точек меню в своем ToolBar-->
+        <item name="actionOverflowButtonStyle">@style/actionOverflowButtonStyle</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <!--        Цвет точек меню в своем ToolBar-->
+    <style name="actionOverflowButtonStyle"
+        parent="@style/Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:tint">@color/yellow_dark</item>
+    </style>
+
 
 <!--     Стиль для Switch- Чомусь не працює-->
     <style name="Switch" parent="Theme.AppCompat.Light">
@@ -22,7 +32,7 @@
         <item name="colorControlActivated">@color/teal_200</item>
     </style>
 
-<!--    Style Homeoafe Fragment-->
+<!--    Style Homepage Fragment-->
     <style name="homePageButton">
         <item name="android:padding">8dp</item>
         <item name="android:textSize">26sp</item>
