--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -50,11 +50,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="10"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
-                android:background="@color/red_light"
+                android:layout_marginStart="4dp"
+                android:padding="8dp"
+                android:background="@drawable/circle_shape_red"
                 android:textColor="@color/red_dark"
                 android:textSize="26sp"
                 android:textStyle="bold"/>
@@ -75,11 +73,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="10"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
-                android:background="@color/green_light"
+                android:layout_marginEnd="8dp"
+                android:padding="8dp"
+                android:background="@drawable/circle_shape_green"
                 android:textColor="@color/green_dark"
                 android:textSize="26sp"
                 android:textStyle="bold"/>
